update polybar colours

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,13 +17,39 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+ rosewater = #f2d5cf
+ flamingo = #eebebe
+ pink = #f4b8e4
+ mauve = #ca9ee6
+ red = #e78284
+ maroon = #ea999c
+ peach = #ef9f76
+ yellow = #e5c890
+ green = #a6d189
+ teal = #81c8be
+ sky = #99d1db
+ sapphire = #85c1dc
+ blue = #8caaee
+ lavender = #babbf1
+ text = #c6d0f5
+ subtext1 = #b5bfe2
+ subtext0 = #a5adce
+ overlay2 = #949cbb
+ overlay1 = #838ba7
+ overlay0 = #737994
+ surface2 = #626880
+ surface1 = #51576d
+ surface0 = #414559
+ base = #303446
+ mantle = #292c3c
+ crust = #232634
+ transparent = #FF00000
+
+ disabled = ${colors.peach}
+ primary = ${colors.mauve}
+ secondary = ${colors.lavender}
+ background = ${colors.mantle}
+ foreground = ${colors.blue}
 
 [bar/main]
 width = 100%
@@ -43,7 +69,7 @@ foreground = ${colors.foreground}
 line-size = 3pt
 
 border-size = 4pt
-border-color = #00000000
+border-color = ${colors.transparent}
 
 padding-left = 0
 padding-right = 1
@@ -51,7 +77,7 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.disabled}
+separator-foreground = ${colors.surface0}
 
 modules-left = i3 xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date systray
@@ -90,11 +116,11 @@ ws-icon-default = ""
 
 label-focused-foreground = ${colors.primary}
 
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.overlay0}
 
 label-separator = "|"
 label-separator-padding = 1
-label-separator-foreground = ${colors.disabled}
+label-separator-foreground = ${colors.surface1}
 
 format = <label-state> <label-mode>
 
@@ -108,6 +134,7 @@ tray-spacing = 16pt
 type = internal/xwindow
 label-active-font = 1
 label = %title:0:60:...%
+format-foreground = ${colors.peach}
 
 [module/filesystem]
 type = internal/fs
@@ -115,7 +142,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#eebebe}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -141,8 +168,8 @@ label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-foreground = ${colors.primary}
+label-indicator-background = ${colors.surface2}
 
 [module/memory]
 type = internal/memory
@@ -163,13 +190,13 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#ea999c}%ifname%%{F-} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
 format-connected = <ramp-signal> <label-connected>
-label-connected = %{F#F0C674}%essid%%{F-} %netspeed%
+label-connected = %{F#eebebe}%essid%%{F-} %netspeed%
 
 ramp-signal-0 = "󰤭"
 ramp-signal-1 = "󰤯"
@@ -181,7 +208,7 @@ ramp-signal-5 = "󰤨"
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#eebebe}%ifname%%{F-}%local_ip%
 
 [module/date]
 type = internal/date
