additional hyprland tweaks

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -19,7 +19,6 @@ $terminal = ghostty
 $fileManager = nautilus
 $menu = wofi --show drun
 
-
 #################
 ### AUTOSTART ###
 #################
@@ -30,7 +29,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 exec-once = xrandr DP-2 --primary
 exec-once = nm-applet & blueman-applet
-exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & hyprpaper
 exec-once = clipse -listen
 
 #############################
@@ -42,6 +41,8 @@ exec-once = clipse -listen
 env = XCURSOR_THEME,WhiteSur-cursors
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = LIBVA_DRIVE_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 
 ###################
@@ -237,6 +238,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
+bind = $mainMod ALT, F, fullscreen,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
