--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -207,6 +207,13 @@ device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
+
+# Monitor listeners
+# listener {
+#   timeout = 3600 # 1 hour
+#   on-timeout = hyprctl dispatch dpms off
+#   on-resume = hyprctl dispatch dpms on
+# }
 #########################
 ### WORKSPACE BINDING ###
 #########################
@@ -231,6 +238,9 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # bind clipse
 bind = $mainMod, V, exec, ghostty --class=com.custom.clipse -e 'clipse'
+# bind shutting off monitors and turning them on
+bind = SHIFT ALT, M, exec, hyprctl dispatch dpms off
+bind = CTRL ALT, M, exec, hyprctl dispatch dpms on
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
