--- a/mako/config
+++ b/mako/config
@@ -1,18 +1,39 @@
+# Mako Notification Daemon Configuration
+
+# Default notification appearance
+anchor=top-right
+default-timeout=5000
+width=420
+outer-margin=20
+padding=10,15
+border-size=2
+max-icon-size=32
+font=sans-serif 14px
+
+# Colors (Tokyo Night theme)
+text-color=#c0caf5
+border-color=#33ccff
+background-color=#1a1b26
+
+# Hide Spotify notifications
+[app-name=Spotify]
+invisible=1
+
+# Do Not Disturb mode
+[mode=do-not-disturb]
+invisible=true
+
+[mode=do-not-disturb app-name=notify-send]
+invisible=false
+
+# Critical notifications never timeout
+[urgency=critical]
+default-timeout=0
+
+# Legacy DND mode
 [mode=dnd]
 invisible=1
 
-anchor=top-right
-font=monospace 10
-background-color=#24273a
-text-color=#cad3f5
-width=350
-margin=20,20,0,0
-padding=10
-border-size=2
-border-color=#b7bdf8
-border-radius=5
-default-timeout=10000
-group-by=summary
-
+# Grouped notifications
 [grouped]
 format=<b>%s</b>\n%b
