librewolf is default browser

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -6,7 +6,7 @@ $mainMod = SUPER
 # Programs
 $terminal = ghostty
 $fileManager = nautilus
-$browser = firefox
+$browser = librewolf
 
 # Application bindings
 bindd = SUPER, RETURN, Terminal, exec, $terminal
