update for new windowsrule syntax

--- a/hyprland/input.conf
+++ b/hyprland/input.conf
@@ -21,8 +21,17 @@ input {
 }
 
 # Scroll nicely in terminals
-windowrule = scrolltouchpad 1.5, class:(Alacritty|kitty)
-windowrule = scrolltouchpad 0.2, class:com.mitchellh.ghostty
+windowrule {
+    name = terminal-scroll
+    match:class = (Alacritty|kitty)
+    scroll_touchpad = 1.5
+}
+
+windowrule {
+    name = ghostty-scroll
+    match:class = com.mitchellh.ghostty
+    scroll_touchpad = 0.2
+}
 
 # Enable touchpad gestures for changing workspaces
 # Uncomment to use 3-finger horizontal swipe for workspaces
