--- a/hyprland/windows.conf
+++ b/hyprland/windows.conf
@@ -2,36 +2,140 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
 # Ignore maximize requests from apps
-windowrule = suppressevent maximize, class:.*
+windowrule {
+    name = suppress-maximize
+    match:class = .*
+    suppress_event = maximize
+}
 
 # Fix dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    name = xwayland-nofocus
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = 1
+    match:float = 1
+    match:fullscreen = 0
+    match:pin = 0
+    no_initial_focus = true
+}
 
 # Subtle opacity for most windows
-windowrule = opacity 0.97 0.9, class:.*
+windowrule {
+    name = default-opacity
+    match:class = .*
+    opacity = 0.97 0.9
+}
 
-# Terminal tags and styling
-windowrule = tag +terminal, class:(Alacritty|kitty|com.mitchellh.ghostty)
+# Terminal tags
+windowrule {
+    name = terminal-tag
+    match:class = (Alacritty|kitty|com.mitchellh.ghostty)
+    tag = +terminal
+}
 
-# Browser types and styling
-windowrule = tag +chromium-based-browser, class:((google-)?[cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
-windowrule = tag +firefox-based-browser, class:([fF]irefox|zen|librewolf)
-windowrule = tile, tag:chromium-based-browser
-windowrule = opacity 1 0.97, tag:chromium-based-browser
-windowrule = opacity 1 0.97, tag:firefox-based-browser
+# Chromium browser tag
+windowrule {
+    name = chromium-tag
+    match:class = ((google-)?[cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable)
+    tag = +chromium-based-browser
+}
 
-# No opacity for video sites and media apps
-windowrule = opacity 1.0 1.0, initialTitle:((?i)(?:[a-z0-9-]+\.)*youtube\.com_/|app\.zoom\.us_/wc/home)
-windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|imv)$
+# Firefox browser tag
+windowrule {
+    name = firefox-tag
+    match:class = ([fF]irefox|zen|librewolf)
+    tag = +firefox-based-browser
+}
 
-# Floating windows
-windowrule = float, tag:floating-window
-windowrule = center, tag:floating-window
-windowrule = size 800 600, tag:floating-window
-windowrule = tag +floating-window, class:(blueberry.py|org.gnome.NautilusPreviewer|com.gabm.satty)
-windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|org.gnome.Nautilus), title:^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files)
-windowrule = float, class:org.gnome.Calculator
+# Tile chromium browsers
+windowrule {
+    name = chromium-tile
+    match:tag = chromium-based-browser
+    tile = true
+}
 
-# Clipse clipboard manager
-windowrulev2 = float,class:(com.custom.clipse)
-windowrulev2 = size 622 652,class:(com.custom.clipse)
+# Chromium opacity
+windowrule {
+    name = chromium-opacity
+    match:tag = chromium-based-browser
+    opacity = 1 0.97
+}
+
+# Firefox opacity
+windowrule {
+    name = firefox-opacity
+    match:tag = firefox-based-browser
+    opacity = 1 0.97
+}
+
+# No opacity for video sites
+windowrule {
+    name = video-sites-opacity
+    match:initial_title = ((?i)(?:[a-z0-9-]+\.)*youtube\.com_/|app\.zoom\.us_/wc/home)
+    opacity = 1.0 1.0
+}
+
+# No opacity for media apps
+windowrule {
+    name = media-apps-opacity
+    match:class = ^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|imv)$
+    opacity = 1 1
+}
+
+# Floating window float
+windowrule {
+    name = floating-float
+    match:tag = floating-window
+    float = true
+}
+
+# Floating window center
+windowrule {
+    name = floating-center
+    match:tag = floating-window
+    center = true
+}
+
+# Floating window size
+windowrule {
+    name = floating-size
+    match:tag = floating-window
+    size = 800 600
+}
+
+# Tag floating apps
+windowrule {
+    name = floating-apps-tag
+    match:class = (blueberry.py|org.gnome.NautilusPreviewer|com.gabm.satty)
+    tag = +floating-window
+}
+
+# Tag file dialogs
+windowrule {
+    name = file-dialogs-tag
+    match:class = (xdg-desktop-portal-gtk|sublime_text|org.gnome.Nautilus)
+    match:title = ^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files)
+    tag = +floating-window
+}
+
+# Calculator float
+windowrule {
+    name = calculator-float
+    match:class = org.gnome.Calculator
+    float = true
+}
+
+# Clipse float
+windowrule {
+    name = clipse-float
+    match:class = (com.custom.clipse)
+    float = true
+}
+
+# Clipse size
+windowrule {
+    name = clipse-size
+    match:class = (com.custom.clipse)
+    size = 622 652
+}
